test/end-to-end/compile-errors/cant-import-crow-as-string.crow
import
	./cant-infer-type-args.crow as x string
